# email_client

./: .gitignore  README.md  pyproject.toml
email_client/: __init__.py  email_client.py  email_factory.py
email_client/providers/: sendgrid.py
tests/unit/: test_email_client.py
